--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Released   : 20120712
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Kreon" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="icon" href="winklewatchesover.jpg">
 	</head>
 	<body>
 		<div id="wrapper">
