--- a/misc.html
+++ b/misc.html
@@ -30,16 +30,18 @@ Released   : 20120712
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Kreon" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="icon" href="images/winklewatchesover.jpg">
 	</head>
 	<body>
 		<div id="wrapper">
 			<div id="header">
 				<div id="logo">
-					<h1><a href="https://www.math.tamu.edu/~jenniferz/index.html">Jennifer Zhu</a></h1>
+					<h1><a href="index.html">Jennifer Zhu</a></h1>
 				</div>
 				<div id="menu">
 					<ul>
 					  <li class="first"><a href="index.html">Home</a></li>
+					  <li><a href="CV.html">CV</a></li>
 					  <li class=""><a href="DEI.html">DEI</a></li>
 					  <li class="last active"><a href="misc.html">Misc</a></li>
 					</ul>
