--- a/CV.html
+++ b/CV.html
@@ -42,7 +42,7 @@ Released   : 20120712
     <div id="page">
       <div class="content">
 	<div class="box">
-	  <a href="CV/jenniferz-cv-aug-2021.pdf">pdf version</a>
+	  <a href="CV/jenniferz-cv-aug-2021.pdf">Downloadable PDF</a>
 	  <br class="clearfix" />
 	  <iframe src="CV/jenniferz-cv-aug-2021.pdf" width="100%" height="1000px">
 	  </iframe>
