--- a/CV.html
+++ b/CV.html
@@ -43,6 +43,7 @@ Released   : 20120712
       <div class="content">
 	<div class="box">
 	  <br class="clearfix" />
+	  <h2><a href="CV/jenniferz-cv-aug-2021.pdf">PDF</a></h2>
 	  <iframe src="CV/jenniferz-cv-aug-2021.pdf" width="100%" height="1000px">
 	  </iframe>
 	</div>
