--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Released   : 20120712
 						<h2>HELLO</h2>
 						
 						<p>
-						  I was previously a PhD student in the  <a href="https://www.math.tamu.edu/" rel="nofollow">Department of Mathematics at Texas A&amp;M</a>. As of fall 2021 I am now pursuing a PhD in <a href="https://uwaterloo.ca/pure-mathematics-quantum-information/" rel="nofollow">Pure Mathematics - Quantum Information</a> at the University of Waterloo under the supervision of <a href="https://www.math.tamu.edu/~mbrannan/" rel="nofollow">Michael Brannan</a>. Pronouns are she/her; I am also a fan of using the singular they/them. I will eventually populate this page with relevant items.
+						  I was previously a PhD student in the  <a href="https://www.math.tamu.edu/" rel="nofollow">Department of Mathematics at Texas A&amp;M</a>. As of fall 2021 I am now pursuing a PhD in <a href="https://uwaterloo.ca/pure-mathematics-quantum-information/" rel="nofollow">Pure Mathematics - Quantum Information</a> at the University of Waterloo under the supervision of <a href="https://www.math.uwaterloo.ca/~m2branna/" rel="nofollow">Michael Brannan</a>. Pronouns are she/her; I am also a fan of using the singular they/them. I will eventually populate this page with relevant items.
 						</p>
 					</div>
 					<div class="box">
