--- a/misc.html
+++ b/misc.html
@@ -42,7 +42,7 @@ Released   : 20120712
 					<ul>
 					  <li class="first"><a href="index.html">Home</a></li>
 					  <li><a href="CV.html">CV</a></li>
-					  <li class=""><a href="DEI.html">DEI</a></li>
+					  <li class=""><a href="EDI.html">EDI</a></li>
 					  <li class="last active"><a href="misc.html">Misc</a></li>
 					</ul>
 					<br class="clearfix" />
