--- a/CV.html
+++ b/CV.html
@@ -32,7 +32,7 @@ Released   : 20120712
 	  <ul>
 	    <li class="first"><a href="index.html">Home</a></li>
 	    <li class="active"><a href="CV.html">CV</a></li>
-	    <li ><a href="DEI.html">DEI</a></li>
+	    <li ><a href="EDI.html">EDI</a></li>
 	    <li class="last"><a href="misc.html">Misc</a></li>
 	  </ul>
 	  <br class="clearfix" />
