--- a/DEI.html
+++ b/DEI.html
@@ -30,7 +30,7 @@ Released   : 20120712
 					<ul>
 					  <li class="first"><a href="index.html">Home</a></li>
 					  <li><a href="CV.html">CV</a></li>
-					  <li class="active"><a href="DEI.html">DEI</a></li>
+					  <li class="active"><a href="EDI.html">EDI</a></li>
 					  <li class="last"><a href="misc.html">Misc</a></li>
 					</ul>
 					<br class="clearfix" />
