--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Released   : 20120712
 					<ul>
 					  <li class="first active"><a href="index.html">Home</a></li>
 					  <li><a href="CV.html">CV</a></li>
-					  <li><a href="DEI.html">DEI</a></li>
+					  <li><a href="EDI.html">EDI</a></li>
 					  <li class="last"><a href="misc.html">Misc</a></li>
 					</ul>
 					<br class="clearfix" />
@@ -51,6 +51,7 @@ Released   : 20120712
 					  <br>
 					  <p style="text-align:center">
 					    EMAIL: uwaterloo.ca@jennifer.zhu
+						OFFICE: irrelevant at the moment
 					  <br/>
 					  </p>
 					</div>
@@ -60,7 +61,11 @@ Released   : 20120712
 						<h2>HELLO</h2>
 						
 						<p>
-						  I was previously a PhD student in the  <a href="https://www.math.tamu.edu/" rel="nofollow">Department of Mathematics at Texas A&amp;M</a>. As of fall 2021 I am now pursuing a PhD in <a href="https://uwaterloo.ca/pure-mathematics-quantum-information/" rel="nofollow">Pure Mathematics - Quantum Information</a> at the University of Waterloo under the supervision of <a href="https://www.math.uwaterloo.ca/~m2branna/" rel="nofollow">Michael Brannan</a>. Pronouns are she/her; I am also a fan of using the singular they/them. I will eventually populate this page with relevant items.
+						  I was previously a PhD student in the  <a href="https://www.math.tamu.edu/" rel="nofollow">Department of Mathematics at Texas A&amp;M</a>. 
+						  As of fall 2021 I am now pursuing a PhD in <a href="https://uwaterloo.ca/pure-mathematics-quantum-information/" 
+						  rel="nofollow">Pure Mathematics - Quantum Information</a> at the University of Waterloo under the supervision of 
+						  <a href="https://www.math.uwaterloo.ca/~m2branna/" rel="nofollow">Michael Brannan</a>. Pronouns are she/her; I am also a fan of using 
+						  the singular they/them. My last name is 朱 if you are curious about the pronunciation.
 						</p>
 					</div>
 					<div class="box">
