--- a/CV.html
+++ b/CV.html
@@ -43,8 +43,8 @@ Released   : 20120712
       <div class="content">
 	<div class="box">
 	  <br class="clearfix" />
-	  <h2><a href="CV/jenniferz-cv-dec-2021.pdf">PDF</a></h2>
-	  <iframe src="CV/jenniferz-cv-dec-2021.pdf" width="100%" height="1000px">
+	  <h2><a href="CV/jenniferz-cv-2022-12.pdf">PDF</a></h2>
+	  <iframe src="CV/jenniferz-cv-2022-12.pdf" width="100%" height="1000px">
 	  </iframe>
 	</div>
       </div>
