--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Released   : 20120712
 					  <img class="center" src="images/profile.jpg" width="242" height="363" alt="" title="Photo credits to Kari Eifler!" />
 					  <br>
 					  <p style="text-align:center">
-					    EMAIL: uwaterloo.ca@jennifer.zhu
+					    EMAIL: jennifer[dot]zhu[at]uwaterloo[dot]ca
 						OFFICE: irrelevant at the moment
 					  <br/>
 					  </p>
