--- a/CV.html
+++ b/CV.html
@@ -18,7 +18,8 @@ Released   : 20120712
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Kreon" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<link rel="icon" href="images/winklewatchesover.jpg">  <title>Jennifer Zhu CV</title>
+		<!-- <link rel="icon" href="images/winklewatchesover.jpg"> -->
+		<title>Jennifer Zhu CV</title>
   </head>
   <body>
     <div id="wrapper">
