--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Released   : 20120712
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-	        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<style type="text/css">
@@ -25,7 +25,7 @@ Released   : 20120712
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Kreon" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<link rel="icon" href="images/winklewatchesover.jpg">
+		<!-- <link rel="icon" href="images/winklewatchesover.jpg"> -->
 	</head>
 	<body>
 		<div id="wrapper">
