--- a/misc.html
+++ b/misc.html
@@ -11,26 +11,14 @@ Released   : 20120712
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-	  <!-- Global site tag (gtag.js) - Google Analytics -->
-	  <!-- I just want to know if you have looked at my dog. Please do so if you have not already. -->
-	  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167500046-1"></script>
-	  <script>
-	    window.dataLayer = window.dataLayer || [];
-	    function gtag(){dataLayer.push(arguments);}
-	    gtag('js', new Date());
-
-	    gtag('config', 'UA-167500046-1');
-	  </script>
-
-	  
-	        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<title>Jennifer Zhu</title>
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Kreon" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<link rel="icon" href="images/winklewatchesover.jpg">
+		<!-- <link rel="icon" href="images/winklewatchesover.jpg"> -->
 	</head>
 	<body>
 		<div id="wrapper">
