--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Released   : 20120712
 					  <br>
 					  <p style="text-align:center">
 					    EMAIL: jennifer[dot]zhu[at]uwaterloo[dot]ca
-						OFFICE: irrelevant at the moment
+						OFFICE: MC 5406
 					  <br/>
 					  </p>
 					</div>
